--- a/catkin_ws/src/nav_pkg/nav_lidar/costmap_common_params.yaml
+++ b/catkin_ws/src/nav_pkg/nav_lidar/costmap_common_params.yaml
@@ -1,11 +1,11 @@
-robot_radius: 0.2
-inflation_radius: 0.7
-obstacle_range: 2.0
-raytrace_range: 2.0
+robot_radius: 0.15
+inflation_radius: 0.6
+obstacle_range: 8.0 # add all obsticles within this range to cost map
+raytrace_range: 8.0 # all cells that are penetrated within this range are considered no obsticle
 observation_sources: base_lidar
 base_lidar: {
   data_type: LaserScan,
   topic: /scan,
-  marking: true,
-  clearing: true
+  marking: true, # if add scanned obsticle to cost map?
+  clearing: true # clear obsticles that no longer exist
 }
