--- a/catkin_ws/src/nav_pkg/nav_lidar/local_costmap_params.yaml
+++ b/catkin_ws/src/nav_pkg/nav_lidar/local_costmap_params.yaml
@@ -1,10 +1,10 @@
 local_costmap:
   global_frame: odom
   robot_base_frame: base_link
-  static_map: false
-  rolling_window: true
-  width: 4
-  height: 4
+  static_map: false # use temp map scanned by lidar
+  rolling_window: true # local costmap follow robot?
+  width: 9
+  height: 9
   update_frequency: 10.0
   publish_frequency: 10
   transform_tolerance: 1.0
