--- a/catkin_ws/src/nav_pkg/nav_lidar/teb_local_planner.yaml
+++ b/catkin_ws/src/nav_pkg/nav_lidar/teb_local_planner.yaml
@@ -1,6 +1,6 @@
 TebLocalPlannerROS:
   odom_topic: odom
-
+  map_frame: map
 
   teb_autosize: true
   dt_ref: 0.5
@@ -10,7 +10,7 @@ TebLocalPlannerROS:
   feasibility_check_no_poses: 2
 
   # motion
-  max_vel_x: 1.5
+  max_vel_x: 0.7
   max_vel_x_backwards: 0.5
   max_vel_theta: 1.0
   acc_lim_x: 0.5
@@ -40,10 +40,10 @@ TebLocalPlannerROS:
 
   # tolerance
   xy_goal_tolerance: 0.2
-  yaw_goal_tolerance: 0.1
+  yaw_goal_tolerance: 0.05
 
   # obstacle
-  min_obstacle_dist: 0.05
+  min_obstacle_dist: 0.2
   inflation_dist: 0.15
   include_costmap_obstacles: true
   costmap_obstacles_behind_robot_dist: 0.15
