--- a/catkin_ws/src/nav_pkg/nav_lidar/teb_local_planner.yaml
+++ b/catkin_ws/src/nav_pkg/nav_lidar/teb_local_planner.yaml
@@ -3,22 +3,24 @@ TebLocalPlannerROS:
   map_frame: map
 
   teb_autosize: true
-  dt_ref: 0.5
-  dt_hysteresis: 0.1
+  dt_ref: 0.15
+  dt_hysteresis: 0.05
   global_plan_overwrite_orientation: true
-  max_global_plan_lookahead_dist: 2.0
+  max_global_plan_lookahead_dist: 3.0
   feasibility_check_no_poses: 2
+  global_plan_viapoint_sep: 0.1
+
 
   # motion
-  max_vel_x: 0.7
-  max_vel_x_backwards: 0.5
-  max_vel_theta: 1.0
-  acc_lim_x: 0.5
-  acc_lim_theta: 1.0
+  max_vel_x: 0.4
+  max_vel_x_backwards: 0.4
+  max_vel_theta: 7.0
+  acc_lim_x: 3
+  acc_lim_theta: 10.0
 
 
-  min_turning_radius: 0.5
-  wheelbase: 0.31
+  min_turning_radius: 0
+  wheelbase: 0
   cmd_angle_instead_rotvel: false
 
 
@@ -26,7 +28,7 @@ TebLocalPlannerROS:
   footprint_model:
     type: "circular"
     # for type=circular:
-    radius: 0.15
+    radius: 0.08
     # for type=line:
     line_start: [0.0,0.0]
     line_end: [0.0,0.0]
@@ -43,25 +45,26 @@ TebLocalPlannerROS:
   yaw_goal_tolerance: 0.05
 
   # obstacle
-  min_obstacle_dist: 0.2
-  inflation_dist: 0.15
+  min_obstacle_dist: 0.4
+  inflation_dist: 0.6
   include_costmap_obstacles: true
   costmap_obstacles_behind_robot_dist: 0.15
   obstacle_poses_affected: 25
   costmap_converter_plugin: ""
 
   # path
-  no_inner_iterations: 3
-  no_outer_iterations: 3
-  penalty_epsilon: 0.1
-  weight_max_vel_x: 2
-  weight_max_vel_theta: 1
+  no_inner_iterations: 10
+  no_outer_iterations: 10
+  penalty_epsilon: 0.05
+  weight_max_vel_x: 1
+  weight_max_vel_theta: 5
   weight_acc_lim_x: 1
   weight_acc_lim_thet: 1
   weight_kinematics_nh: 1000
   weight_kinematics_forward_drive: 1
-  weight_optimaltime: 1
-  weight_obstacle: 50
+  weight_optimaltime: 100
+  weight_obstacle: 1000
+  weight_viapoint: 10
 
   # multi path
   enable_homotopy_class_planning: true
@@ -72,3 +75,97 @@ TebLocalPlannerROS:
   selection_alternative_time_cost: False 
   roadmap_graph_no_samples: 15
   roadmap_graph_area_width: 5
+
+# TebLocalPlannerROS:
+
+#   odom_topic: odom
+#   #odom_topic: /rtabmap/odom
+#   map_frame: map
+      
+#   # Trajectory
+    
+#   teb_autosize: True
+#   dt_ref: 0.3 #0.2
+#   dt_hysteresis: 0.1
+#   global_plan_overwrite_orientation: True
+#   max_global_plan_lookahead_dist: 3.0
+#   feasibility_check_no_poses: 5
+    
+#   # Robot
+          
+#   max_vel_x: 0.40 #0.25 
+#   max_vel_x_backwards: 0.4 #0.2
+#   max_vel_theta: 1.0 #0.5
+#   acc_lim_x: 0.5 # 0.2
+#   acc_lim_theta: 0.6283 #0.5, 0.26
+#   min_turning_radius: 0.0
+#   footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
+#     type: "circular" 
+#     radius: 0.08 # for type "circular"
+#     #line_start: [-0.3, 0.0] # for type "line"
+#     #line_end: [0.3, 0.0] # for type "line"
+#     #front_offset: 0.2 # for type "two_circles"
+#     #front_radius: 0.2 # for type "two_circles"
+#     #rear_offset: 0.2 # for type "two_circles"
+#     #rear_radius: 0.2 # for type "two_circles"
+#     # vertices: [ [0.26, 0.26], [0.26, -0.26], [-0.26, -0.26], [-0.26,0.26] ]   # for type "polygon"
+
+#   # GoalTolerance
+      
+#   xy_goal_tolerance: 0.2 #0.2
+#   yaw_goal_tolerance: 0.1571
+#   free_goal_vel: False
+      
+#   # Obstacles
+      
+#   min_obstacle_dist: 0.15
+#   inflation_dist: 0.6
+#   dynamic_obstacle_inflation_dist: 0.4
+#   include_costmap_obstacles: True
+#   costmap_obstacles_behind_robot_dist: 0.1
+#   obstacle_poses_affected: 25 #30
+#   costmap_converter_plugin: ""
+#   costmap_converter_spin_thread: True
+#   costmap_converter_rate: 5
+
+#   # Optimization
+      
+#   no_inner_iterations: 5 #5
+#   no_outer_iterations: 4 #4
+#   optimization_activate: True
+#   optimization_verbose: False
+#   penalty_epsilon: 0.1
+#   weight_max_vel_x: 2 #2
+#   weight_max_vel_theta: 1 #1
+#   weight_acc_lim_x: 1 # 1
+#   weight_acc_lim_theta: 1 # 1
+#   weight_kinematics_nh: 1000 #1000
+#   weight_kinematics_forward_drive: 1000 #1000
+#   weight_kinematics_turning_radius: 1 #1 #only for car-like robots
+#   weight_optimaltime: 1.0 #1
+#   weight_obstacle: 50 #50
+#   weight_viapoint: 5.0 #5.0 #1.0
+#   weight_inflation: 0.1 #0.1
+#   weight_dynamic_obstacle: 10 # not in use yet
+#   selection_alternative_time_cost: False # not in use yet
+
+#   # Homotopy Class Planner
+
+#   enable_homotopy_class_planning: False #True
+#   enable_multithreading: True
+#   simple_exploration: False
+#   max_number_classes: 2 #4
+#   roadmap_graph_no_samples: 15
+#   roadmap_graph_area_width: 5
+#   h_signature_prescaler: 0.5
+#   h_signature_threshold: 0.1
+#   obstacle_keypoint_offset: 0.1
+#   obstacle_heading_threshold: 0.45
+#   visualize_hc_graph: False
+
+#   #ViaPoints
+#   global_plan_viapoint_sep: 0.5 #negative if none
+#   via_points_ordered: False #adhere to order of via points
+
+#   #Feedback
+#   publish_feedback: true #false
