--- a/catkin_ws/src/nav_pkg/nav_lidar/teb_local_planner.yaml
+++ b/catkin_ws/src/nav_pkg/nav_lidar/teb_local_planner.yaml
@@ -12,12 +12,12 @@ TebLocalPlannerROS:
 
 
   # motion
-  max_vel_x: 0.25
+  max_vel_x: 0.3
   max_vel_y: 0
   max_vel_x_backwards: 0.25
-  max_vel_theta: 2.0
-  acc_lim_x: 3
-  acc_lim_theta: 10.0
+  max_vel_theta: 1.0
+  acc_lim_x: 1
+  acc_lim_theta: 0.05
 
 
   min_turning_radius: 0
@@ -31,15 +31,15 @@ TebLocalPlannerROS:
     # for type=circular:
     radius: 0.08
     # for type=line:
-    line_start: [0.0,0.0]
-    line_end: [0.0,0.0]
+    # line_start: [0.0,0.0]
+    # line_end: [0.0,0.0]
     # for type=two_circles
-    front_offset: 0.35
-    front_radius: 0.35
-    rear_offset: 0.35
-    rear_radius: 0.35
+    # front_offset: 0.35
+    # front_radius: 0.35
+    # rear_offset: 0.35
+    # rear_radius: 0.35
     # for type=polygon
-    vertices: [[0.35, 0.0],[-0.2, -0.25],[0.2,-0.25]]
+    # vertices: [[0.35, 0.0],[-0.2, -0.25],[0.2,-0.25]]
 
   # tolerance
   xy_goal_tolerance: 0.2
@@ -47,25 +47,25 @@ TebLocalPlannerROS:
 
   # obstacle
   min_obstacle_dist: 0.4
-  inflation_dist: 0.8
+  inflation_dist: 0.5
   include_costmap_obstacles: true
   costmap_obstacles_behind_robot_dist: 0.15
   obstacle_poses_affected: 25
   costmap_converter_plugin: ""
 
   # path
-  no_inner_iterations: 10
-  no_outer_iterations: 10
+  no_inner_iterations: 4
+  no_outer_iterations: 4
   penalty_epsilon: 0.05
-  weight_max_vel_x: 3
+  weight_max_vel_x: 1
   weight_max_vel_theta: 5
   weight_acc_lim_x: 1
   weight_acc_lim_thet: 1
   weight_kinematics_nh: 1000
-  weight_kinematics_forward_drive: 5
-  weight_optimaltime: 10
-  weight_obstacle: 100
-  weight_viapoint: 10
+  weight_kinematics_forward_drive: 1
+  weight_optimaltime: 300
+  weight_obstacle: 200
+  weight_viapoint: 100
 
   # multi path
   enable_homotopy_class_planning: true
